fix overlap

--- a/my-app/src/react-components/Navbar/style.css
+++ b/my-app/src/react-components/Navbar/style.css
@@ -2,6 +2,7 @@ NavbarRB {
 	position: fixed;
 	top: 0;
 	color:white;
+	display: block;
 }
 
 NavBarRB.Link{
